<resources>
    <string name="app_name">PY Dukann</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_closed">Close navigation drawer</string>
    <string name="login">Log In</string>
    <string name="enter_mob_no_txt">Proceed with your phone number</string>
    <string name="mob_no_placeHolder">Enter phone number here</string>
    <string name="ten_digit_mob_no">Enter OTP here</string>
    <string name="otp_ver">OTP Verification</string>
    <string name="otp_verification_sent">OTP has been sent to +91-</string>
    <string name="resend_otp">Didn\'t receive OTP?RESEND</string>
    <string name="send_otp">send otp</string>
    <string name="verify">Verify</string>
    <string name="select_store">Select Store</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome1">Please select nearest store to continue</string>
    <string name="pull_down_txt">Pull down to reload list</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="switch_store">Switch Store</string>
    <string name="contact_merchant">Contact Merchant</string>
    <string name="refer">Refer and Earn</string>
    <string name="logout">Log Out</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="copy_text"></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_policy">Terms of Use</string>
    <string name="shipping_policy">Shipping Policy</string>
    <string name="return_policy">Return Policy</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="gst_num">GST Number</string>
    <string name="applychanges">Apply Changes</string>
    <string name="price_details">Price Details</string>
    <string name="tot_mrp">Total MRP</string>
    <string name="gst_text">Tax</string>
    <string name="discount">Discount</string>
    <string name="reg_mob_no">Registered Number</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="terms_txt">Copyright 2021 GetPy Analytics Pvt Ltd.All rights reserved</string>
    <string name="loc_text">Please check "Use my Current Location" if ordering from the location where you want your order to be delivered. It will help in quick delivery</string>
    <string name="name">Name</string>
    <string name="altnumber">Alternate Number (optional)</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="addresstype">AddresType</string>
    <string name="flatno">Flat No./Apartment Name (optional)</string>
    <string name="address">Address</string>
    <string name="postal">Postal/Zip Code</string>
    <string name="default_lat">00.000000</string>
    <string name="default_lng">00.000000</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Please turn your GPS on for automatic location capture</string>
    <string name="enable_now">Enable Now</string>
    <string name="start_date">Offer start date: </string>
    <string name="expire_date">Offer valid till:</string>
    <string name="max_discount">Maximum discount:</string>
    <string name="notification_channel_id">default</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="location_permission_not_granted">Unable to access location. Permission not granted.</string>
    <string name="product_desc"><u>Product Description</u></string>
    <string name="special_inst">Special delivery instructions</string>
    <string name="add_cooking_inst">Add Delivery Instructions (optional)</string>
    <string name="delivery_inst">Our store will follow your instructions on the best effort basis.</string>
    <string name="delivery_warning">No refunds or cancellations will be processed based on failure to comply with requests for special instructions.</string>
    <string name="suc_str">Congratulations!! your order placed successfully. Thank you."</string>
    <string name="fail_str">Sorry!! your order is failed.Please try again later.Check "My Orders" tab for order status."</string>
    <string name="ref_msg">Invite your friends to download our app to earn exciting benefits.</string>
</resources>