<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/corord_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">
            <RelativeLayout
                android:id="@+id/laout"
                android:padding="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text"
                    android:textSize="@dimen/_16sdp"
                    android:layout_toLeftOf="@+id/image"
                    android:textColor="@android:color/black"
                    android:text="@string/special_inst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/close"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_close_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/view"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@color/family_grey"
                android:layout_below="@+id/laout"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <RelativeLayout
                android:id="@+id/sec2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_but"
                    android:background="@drawable/rectangle_corner_selected"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentEnd="true"
                    android:text="ADD"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/inst_desc_one"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@id/add_but"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/delivery_inst"
                    android:textColor="@color/quantum_grey800" />

            </RelativeLayout>
            <EditText
                android:id="@+id/add_inst_edit"
                android:hint="@string/add_cooking_inst"
                android:layout_below="@+id/sec2"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/inst_desc"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/family_red"
                android:text="@string/delivery_warning"
                android:layout_below="@+id/add_inst_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
