<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/top_layout"
            android:background="@color/family_red"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp">
        </FrameLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:id="@+id/logo_image"
            android:src="@drawable/ic_message"
            app:fabCustomSize="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_60sdp"
            app:maxImageSize="@dimen/_40sdp"
            app:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/_9sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:id="@+id/text_layout"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_above="@id/layout"
            android:layout_below="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/login_txt"
                android:layout_centerHorizontal="true"
                android:text="@string/otp_ver"
                android:gravity="center"
                android:textSize="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_below="@+id/login_txt"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/otp_has_sent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/otp_verification_sent"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/mob_no_txt"
                    android:text="XXXXXXXXXX"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@+id/otp_has_sent"
                    android:textColor="@color/family_red"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/mob_num_edit_txt_layout"
                android:layout_above="@+id/sendOtpBut"
                android:background="@drawable/rounded_corner_wout_border"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/mobile_num_edit"
                    android:padding="@dimen/_7sdp"
                    android:hint="@string/ten_digit_mob_no"
                    android:textSize="@dimen/_10sdp"
                    android:inputType="number"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendOtpBut"
                android:text="@string/verify"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:background="@drawable/rounded_corner"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resend_otp"
            android:padding="@dimen/_13sdp"
            android:background="@drawable/ripple_effect"
            android:layout_alignParentRight="true"
            android:text="@string/resend_otp"
            android:layout_below="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:indeterminateTint="@color/family_red"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</layout>
